// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TransactionApproval renders QR signing modal if signing QR object is exists 1`] = `""`;

exports[`TransactionApproval renders approval component if transaction type is dapp 1`] = `
<Component
  dappTransactionModalVisible={true}
  hideModal={[Function]}
/>
`;

exports[`TransactionApproval renders approve component if transaction type is transaction 1`] = `
<Component
  hideModal={[Function]}
  modalVisible={true}
/>
`;
